style.css
/* ... */
.ie8 .hasSidebar .mainContent {
	width: 76%;
}

.mainContent {
	width: 100%;
}

.mainContent h3 {
	line-height: 1.5;
}

/* ---- Full Width Template Styles ---- */
.section-wrapper {
	padding-bottom: 50px;
	margin-bottom: 50px;
	border-bottom: 1px solid #888;
	float: left;
}

.section-wrapper-last {
	float: left;	
	margin: 25px 0;
}

.main {
	float: left;
	padding-right: 2em;
	width: 76%;
}

.main p {
	margin-bottom: 1.25em !important;
	line-height: 1.5;
}

.main h3 {
	font-size: 1.5em;
	font-weight: 700;
	padding: 1em 0;
}

.location-hours {
	font-weight: 700;
}

.contact-email {
	font-weight: bold;
}

.box {
	padding: 0 15px 10px;
	background: #eee;
	border: 1px solid #888;
	margin-bottom: 25px;
}

.box h4 {
	font-weight: 700;
	line-height: 1.5;	
}

/* Post & Entry Content Styles */
.childTheme #mainContent .entry-content {
	padding:0 20px 20px 0;
}

.entry-content h1 {
	line-height:1;
}

.entry-content h2 {
	font-family:'Open Sans',sans-serif;
	font-size:24px;
	font-size:1.5rem;
	line-height:1;
}

.entry-content h2:first-of-type,.entry-content h3:first-of-type {
	margin-top:0;
}

/* Make this simper when the !important 10px bottom margin on all p tags is removed */
.entry-content p:first-of-type ~ h2:first-of-type {
	margin-top:1.714285714rem;
}

.entry-content h2 ~ h3 {
	margin-top:.5rem;
}

.entry-content hr ~ h2,.entry-content hr ~ h3 {
	margin:0;
}

.mainContent .post h2,.category .post h3,.search .post h3 {
	font-size:24px;
	line-height:28px;
	margin-bottom:0;
}

.post h2 a,.category .post h3 a,.search .post h3 a {
	color:#333;
}

.post small {
	display:block;
	font-size:11px;
}

.post .entry {
	margin-top:10px;
}

.post ul,.post ol,.entry-content ul,.entry-content ol {
	margin-left:1em;
}

.post:not(:last-of-type):after {
	background:#ccc;
	content:'';
	display:block;
	height:1px;
	margin:2em auto;
	width:80%;
}

.entry-content .expandable:nth-of-type(odd) {
	background:#eceaea!important;
}

.childTheme #breadcrumb {
	height:100%;
	line-height:1;
	padding:.5em 1.25rem;
	white-space:nowrap;
}

.breadcrumbs {
	display:inline-block;
}

.childTheme.page-home .flexItem {
	max-width:100%;
}

.childTheme.page-home .flexItem:first-of-type {
	border-right:1px solid #ccc;
	padding-right:1.5em;
}

.childTheme.page-home .flexItem:last-of-type {
	padding-left:1.5em;
}

.no-js .childTheme.page-home .flexItem,.no-flexbox .childTheme.page-home .flexItem {
	width:50%;
}

.current-exhibit {
	margin:25px 0;
}

.currentExhibit {
	margin-top:25px;
	color:#338bc5;
	font-style:italic;
	font-weight:700;
}

.exhibits-header {
	margin:10px 20px 30px;
}

.exhibits-header h1 {
	font-size:24px;
}

/* Category Styles */
.category-post {
	display:flex;
	align-items:flex-start;
	margin:2em 0;
}

.category-post-slider {
	display:flex;
	align-items:flex-start;
	margin:0 0 2em;
}

.sticky-slider .exhibit-title,.sticky-slider .sub-title,.sticky-slider .datespan {
	margin:10px 0;
	line-height:1.5;
}

.category-post__fig {
	margin-right:1em;
}

.category-post__body {
	flex:1;
}

.sub-title {
	font-size:16px;
}

/* ---- Sidebar ---- */
.sidebar {
	float: left;
	width: 220px;
	width: 23.91%;
}

.ie8 .sidebar {
	width: 23%;
}

.childTheme .widget span {
	display: block;
}

.childTheme .widget ul li,
.childTheme .widget span,
.childTheme .widget p,
.childTheme .widget .textwidget {
	font-size: 14px;
	line-height: 1.5;
	margin-bottom: 5px;
}

.childTheme .widget-title {
	font-size: 16px !important;
	font-weight: 600 !important;
}
.childTheme .sidebar .widget {
	background: none;
	border-top: 2px solid #ddd;
	border-bottom: 0;
	padding: 0;
	padding-bottom: 20px;
	padding-top: 20px;
}

.childTheme .sidebar .widget:first-child {
	border-top: 0;
}

.contribute.widget {
	background: #e4e4e4 !important;
	border-top: 2px solid #c63 !important;
	padding-left: 20px !important;
	padding-right: 20px !important;
}

.archnet {
	color: #c63 !important;
}

footer #footerHeader,
footer .footerHeader {
	height: 92px;
}

.search .no-results .entry-content {
	margin-bottom: 2em;
}

/* ---- Widgets ---- */
.staff-widget {
	float: left;
	width: 30%;
	margin-top: 30px;
	margin-right: 5%;
}

.staff-widget .textwidget,
.sidebar-staff-widget .textwidget {
	font-size: 12px !important;
	line-height: 1.5;
}

.staff-widget.last {
	margin-right: 0;
}

.staff-widget .widget-title {
	display: none;
}

.staff-widget h3,
.staff-widget h4,
.sidebar-staff-widget h3,
.sidebar-staff-widget h4 {
	margin: 0;
	padding: 0;
	line-height: 1.5;
	font-size: 16px;
}

.staff-widget h3,
.sidebar-staff-widget h3 {
	font-weight: 600;
}

.staff-widget h4,
.sidebar-staff-widget h4 {
	padding-bottom: 10px;
}

a.px14 {
	font-size: 14px;
}

/* ---- Disaster-Response Styles ----*/
.sidebar .button.disaster-response {
	background:none;
	border-bottom:none;
	margin-bottom:16px;
	margin-bottom:1rem;
	padding:0;
}

.disaster-response {
	font-family:'Open Sans',sans-serif;
	font-size:16px;
	font-size:1rem;
	font-weight:;
	text-align:center;
}

.disaster-response a {
	background:#f58632;
/* $orange-dark */
	border-radius:3px;
	color:#fff;
	display:block;
	padding:16px;
	padding:1rem;
	width:100%;
}

.disaster-response a:hover {
	color:#fff;
}

/* ---- Give Now Styles ----*/
.sidebar .widget.give {
	background-color:#fff;
	border-bottom:none;
}

a.giveNow {
	background:#f58632;
	border-radius:3px;
	color:#fff;
	display:block;
	padding:16px;
	padding:1rem;
	width:100%;
	text-align:center;
}

a.giveNow:hover {
	color:#fff;
}

/* ---- Fields, Inputs, Buttons etc. ---- */
.buttons {
	margin: 50px 0;
}

.button-set {
	display: inline !important;
}

.button-set:first-child {
	margin-right: 50px;
}

.search input[type="text"] {
	height:auto;
	line-height:1.5;
	margin:0;
}

/* ---- Gallery Styles ---- */
.childTheme .wp-caption .wp-caption-text,
.childTheme .gallery-caption,
.childTheme .entry-caption {
	text-align: left;
	font-style: normal;
	font-size: 12px;
	line-height: 1.5;
	color: #111;
}
/* ... */

